# video-to-doc

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  session-ses_4347.md
.github/workflows/: tests.yml
examples/: README.md  sample_output.md  sample_video_urls.txt
scripts/: check_dependencies.py  quickstart.sh
tests/: README.md  __init__.py  conftest.py
tests/unit/: test_config.py  test_exceptions.py  test_logger.py
video_to_doc/: __init__.py  batch_processor.py  cli.py  config.py  config_loader.py  doc_generator.py  downloader.py  exceptions.py  frame_extractor.py  interactive_cli.py  logger.py  pipeline.py  transcriber.py  web_ui.py
